<resources>
    <string name="app_name">Smart Office</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="sales_partner">Sales Partner</string>
    <string name="happy_client">Happy Client</string>
    <string name="game">Game</string>
    <string name="rate">Rate</string>

    <string name="logout">Logout</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="other">Other</string>
    <string name="change_password">Change password</string>
    <string name="edit_profile">Profile</string>
    <string name="enter_your_old_password">Enter your current password</string>
    <string name="enter_your_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="menu_share">Share this app</string>
    <string name="report_issue">Report Issue</string>
    <string name="support">support</string>
    <string name="continue_with">Continue with</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="reset_password">Reset Password</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_you_password">By clicking RESET, you will receive an email to reset your password</string>
    <string name="my_account">My Account</string>
    <string name="my_wallet">My Wallet</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="preferences">Preferences</string>
    <string name="check_history">Check history</string>
    <string name="support_and_feedback">Support and feedback</string>
    <string name="sign_up_with_facebook">Sign Up with FACEBOOK</string>
    <string name="by_clicking_sign_up_you_agree_to_our">By clicking sign up you agree to our</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="the_office_where_you_get_smart">The office where you get smart</string>

</resources>
