<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    android:orientation="vertical"
    tools:context=".SignUpScreen">

    <ScrollView
        android:id="@+id/lyr_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/txt_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold|normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etxname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_gradient"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etx_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_gradient"
                    android:drawableStart="@drawable/ic_action_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etx_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_gradient"
                    android:drawableStart="@drawable/ic_name_call"
                    android:drawablePadding="10dp"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etx_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_gradient"
                    android:drawableStart="@drawable/ic_lock_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etx_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/box_gradient"
                    android:drawableStart="@drawable/ic_lock_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/by_clicking_sign_up_you_agree_to_our"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/term_and_cond"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/terms_and_conditions"
                        android:textColor="@android:color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_ripple_effect"
                        android:text="@string/signup"
                        android:textColor="@color/colorGreen" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6sp"
                    android:layout_marginLeft="6sp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>