<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/txt_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etx_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/box_gradient"
                android:drawableLeft="@drawable/ic_action_name"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etx_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/box_gradient"
                android:drawableLeft="@drawable/ic_lock_name"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="monospace"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/forget_password"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_ripple_effect"
                android:fontFamily="monospace"
                android:text="@string/login"
                android:textColor="@color/colorGreen"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/sign_up_with_facebook"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_forgot_password"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_dont_hv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6sp"
                    android:layout_marginLeft="6sp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>