<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/btn_ripple_effect"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/dots_margin_bottom"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/no_photo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <!--<ImageView
        android:id="@+id/profile_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/placeholder" />-->

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/black" />

</LinearLayout>
