<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    android:orientation="vertical"
    tools:context=".ForgetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="150dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/txt_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold|normal" />

            <EditText
                android:id="@+id/etx_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/box_gradient"
                android:drawableStart="@drawable/ic_action_name"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/reset_password"
                android:textColor="@color/colorGreen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/by_clicking_reset_you_will_receive_an_email_to_reset_you_password" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>